[tool.poetry]
name = "label-consistent-backdoor-code"
version = "0.1.0"
description = ""
authors = ["PythonNut <PythonNut@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.4"
tensorflow-gpu = "^2.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
